Caculation logic added.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/vinay01joshi/code-20200913-vinayjoshi#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "http-status-codes": "^2.1.4"
+    "http-status-codes": "^2.1.4",
+    "jsonfile": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
