--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon ./server/server.js",
     "start": "NODE_ENV=production node ./server/server.js",
     "debug": "$env:DEBUG='*' node ./server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'test/**/*.js' --timeout 10000"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,9 @@
     "jsonfile": "^6.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "chai": "^4.3.4",
+    "mocha": "^9.1.1",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   }
 }
